cmss/main/default/objects/ClientClaimEntitlement__c/ClientClaimEntitlement__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the information necessary to manage milestones and entitlement on Case for Client Claim record type</description>
    <label>Client Claim Entitlement</label>
</CustomObject>