cmss/main/default/objects/ClientClaimEntitlement__c/fields/EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>EntitlementId__c</fullName>
    <description>The Id of the entitlement used for Client Claim cases</description>
    <label>EntitlementId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>