cmss/main/default/objects/ClientClaimEntitlement__c/fields/ReceivingConfirmationMilestoneName__c.field-meta.xml
<CustomField>
    <fullName>ReceivingConfirmationMilestoneName__c</fullName>
    <description>Name of the Milestone Type that tracks the filling of the case field ReceivingConfirmationDate__c</description>
    <label>Receiving Confirmation Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>