cmss/main/default/objects/ClientClaimEntitlement__c/fields/ResponseSentMilestoneName__c.field-meta.xml
<CustomField>
    <fullName>ResponseSentMilestoneName__c</fullName>
    <description>Name of the Milestone Type that tracks the filling of the case field ResponseSent__c. When the field is filled in, it means that the case is resolved and closed.</description>
    <label>Response Sent Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>